--- a/src/resources/MessageBundle_fr_FR.properties
+++ b/src/resources/MessageBundle_fr_FR.properties
@@ -1,1 +1,9 @@
 message.welcome = BIENVENUE A CITY VISIT TRACKER.
+menu.chooseAction = VEUILLEZ CHOISIR UNE ACTION.
+menu.printAll = LISTER TOUTES LES VILLES.
+menu.addCity = AJOUTER UNE VILLE.
+menu.editCity = MODIFIER UNE VILLE.
+menu.removeCity = SUPPRIMER UNE VILLE.
+menu.changeLocale = CHANGER LA LANGUE.
+menu.exit = QUITTER.
+message.chooseLanguage = POUR LE MOMENT, CETTE APPLICATION EST SUPPORTEE QU'EN FRANCAIS ET EN ANGLAIS. SUPPORTED ONLY IN FRENCH AND IN ENGLISH. VOULEZ VOUS CHANGER LA LANGUE EN ANGLAIS?
