Improved several private util methods in the main class

--- a/src/resources/MessageBundle_en_US.properties
+++ b/src/resources/MessageBundle_en_US.properties
@@ -1,6 +1,7 @@
 message.welcome = WELCOME TO CITY VISIT TRACKER.
 menu.chooseAction = PLEASE, CHOOSE AN ACTION:
 menu.printAll = PRINT ALL CITIES.
+menu.printAllException = THERE IS NO AVAILABLE CITY AT THE MOMENT.
 menu.addCity = ADD A CITY.
 menu.editCity = EDIT A CITY.
 menu.removeCity = REMOVE A CITY.
