Implemented a new method to add a new city to the collection of cities

--- a/bin/resources/MessageBundle_en_US.properties
+++ b/bin/resources/MessageBundle_en_US.properties
@@ -10,6 +10,10 @@ message.visitedAtStr = VISITED AT.
 
 # Add city section:
 menu.addCity = ADD A CITY.
+message.printCityName = PLEASE SUMBIT THE NAME OF THE NEW CITY:
+message.printVisitedDate = PLEASE SUMBIT THE DATE OF YOUR VISIT (MM/dd/yyyy):
+message.citySaved = NEW CITY SAVED SUCCESSFULLY.
+message.addCityException = AN ERROR HAS OCCURED, PLEASE TRY AGAIN.
 
 # Edit city section:
 menu.editCity = EDIT A CITY.
