--- a/src/resources/MessageBundle_en_US.properties
+++ b/src/resources/MessageBundle_en_US.properties
@@ -1,10 +1,30 @@
+# Global messages:
 message.welcome = WELCOME TO CITY VISIT TRACKER.
 menu.chooseAction = PLEASE, CHOOSE AN ACTION:
+
+# Print all section:
 menu.printAll = PRINT ALL CITIES.
-menu.printAllException = THERE IS NO AVAILABLE CITY AT THE MOMENT.
+message.printAllException = THERE IS NO AVAILABLE CITY AT THE MOMENT.
+message.availableCitiesStr = AVAILABLE CITIES:
+message.visitedAtStr = VISITED AT.
+
+# Add city section:
 menu.addCity = ADD A CITY.
+message.printCityName = PLEASE SUMBIT THE NAME OF THE NEW CITY:
+message.printVisitedDate = PLEASE SUMBIT THE DATE OF YOUR VISIT (MM/dd/yyyy):
+message.citySaved = NEW CITY SAVED SUCCESSFULLY.
+message.addCityException = AN ERROR HAS OCCURED, PLEASE TRY AGAIN.
+
+# Edit city section:
 menu.editCity = EDIT A CITY.
+
+# Remove city section:
 menu.removeCity = REMOVE A CITY.
+
+# Change language section:
 menu.changeLocale = CHANGE LANGUAGE.
-menu.exit = EXIT.
 message.chooseLanguage = FOR THE MOMENT, THIS APPLICATION IS SUPPORTED ONLY IN FRENCH AND IN ENGLISH. DO YOU WANT TO SWITCH TO FRANCE?
+
+# Exit section:
+menu.exit = EXIT.
+message.exit = GOODBYE, SEE YOU NEXT TIME!
