--- a/src/resources/MessageBundle_en_US.properties
+++ b/src/resources/MessageBundle_en_US.properties
@@ -6,7 +6,7 @@ menu.chooseAction = PLEASE, CHOOSE AN ACTION:
 menu.printAll = PRINT ALL CITIES.
 message.printAllException = THERE IS NO AVAILABLE CITY AT THE MOMENT.
 message.availableCitiesStr = AVAILABLE CITIES:
-message.visitedAtStr = VISITED AT.
+message.printCity = CITY {0}, VISITED ON DATE {1}
 
 # Add city section:
 menu.addCity = ADD A CITY.
@@ -17,9 +17,12 @@ message.addCityException = AN ERROR HAS OCCURED, PLEASE TRY AGAIN.
 
 # Edit city section:
 menu.editCity = EDIT A CITY.
+message.chooseIndexForEdit = PLEASE CHOOSE THE INDEX OF THE CITY THAT YOU WANT TO EDIT.
+message.printNewVisitDate = PLEASE PROVIDE THE NEW DATE OF YOUR VISIT.
 
 # Remove city section:
 menu.removeCity = REMOVE A CITY.
+message.chooseIndexForEdit = PLEASE CHOOSE THE INDEX OF THE CITY THAT YOU WANT TO REMOVE.
 
 # Change language section:
 menu.changeLocale = CHANGE LANGUAGE.
