--- a/src/resources/MessageBundle_fr_FR.properties
+++ b/src/resources/MessageBundle_fr_FR.properties
@@ -1,6 +1,12 @@
 message.welcome = BIENVENUE A CITY VISIT TRACKER.
 menu.chooseAction = VEUILLEZ CHOISIR UNE ACTION.
-menu.printAll = LISTER TOUTES LES VILLES.
+
+# Print all section:
+menu.printAll = LISTER TOUTES LES VILLES..
+message.printAllException = VOUS N'AVEZ VISITEZ AUCUNE VILLE POUR LE MOMENT.
+message.availableCitiesStr = VILLES DISPONILBLES:
+message.visitedAtStr = VISITE LE
+
 menu.addCity = AJOUTER UNE VILLE.
 menu.editCity = MODIFIER UNE VILLE.
 menu.removeCity = SUPPRIMER UNE VILLE.
