Added a new Util class 'ChangeLocaleUtils' that will be used within the main class

--- a/bin/resources/MessageBundle_en_US.properties
+++ b/bin/resources/MessageBundle_en_US.properties
@@ -6,7 +6,7 @@ menu.chooseAction = PLEASE, CHOOSE AN ACTION:
 menu.printAll = PRINT ALL CITIES.
 message.printAllException = THERE IS NO AVAILABLE CITY AT THE MOMENT.
 message.availableCitiesStr = AVAILABLE CITIES:
-message.printCity = CITY {0} || VISITED ON DATE {1}
+message.printCity = \n CITY {0} || VISITED ON DATE {1}
 
 # Add city section:
 menu.addCity = ADD A CITY.
