Update the MessageBundle_fr_FR.properties file to englobe all the messages that should be displayed for the client if the default locale is set to fr_FR

--- a/src/resources/MessageBundle_fr_FR.properties
+++ b/src/resources/MessageBundle_fr_FR.properties
@@ -1,19 +1,34 @@
+# Global messages:
 message.welcome = BIENVENUE A CITY VISIT TRACKER.
 menu.chooseAction = VEUILLEZ CHOISIR UNE ACTION.
 
 # Print all section:
 menu.printAll = LISTER TOUTES LES VILLES..
 message.printAllException = VOUS N'AVEZ VISITEZ AUCUNE VILLE POUR LE MOMENT.
-message.availableCitiesStr = VILLES DISPONILBLES:
-message.visitedAtStr = VISITE LE
+message.availableCitiesStr = ILLES DISPONILBLES:
+message.printCity = VILLE {0} || VISITE LE {1}
+
+# Add city section:
+menu.addCity = AJOUTER UNE VILLE.
+message.printCityName = VEUILLEZ SAISIR LE NOM DE LA VILLE:
+message.printVisitedDate = VEUILLEZ SAISIR LA DATE DE LA VISITE (dd/MM/yyyy):
+message.citySaved = VILLE AJOUTEE AVEC SUCCES.
+message.addCityException = UNE ERREUR S'EST PRODUISE, VEUILLEZ REESSAYER.
+
+# Edit city section:
+menu.editCity = MODIFIER UNE VILLE.
+message.chooseIndexForEdit = VEUILLEZ SAISISSEZ LE NOM DE LA VILLE QUE VOUS VOULEZ MODIFIER.
+message.printNewVisitDate = VEUILLEZ SAISIR LA NOUVELLE DATE DE LA VISITE.
+
+# Remove city section:
+menu.removeCity = SUPPRIMER UNE VILLE.
+message.chooseIndexForEdit = VEUILLEZ SAISISSEZ LE NOM DE LA VILLE QUE VOUS VOULEZ SUPPRIMER.
 
 # Change language section:
 menu.changeLocale = CHANGER LA LANGUE.
 message.chooseLanguage = POUR LE MOMENT, CETTE APPLICATION EST SUPPORTEE QU'EN FRANCAIS ET EN ANGLAIS. SUPPORTED ONLY IN FRENCH AND IN ENGLISH. VOULEZ VOUS CHANGER LA LANGUE EN ANGLAIS?
 message.printValidAnswerException = VEUILLEZ CHOISIR UNE OPTION VALIDE ('OUI', 'O', 'NON' ou 'N').
 
-menu.addCity = AJOUTER UNE VILLE.
-menu.editCity = MODIFIER UNE VILLE.
-menu.removeCity = SUPPRIMER UNE VILLE.
+# Exit section:
 menu.exit = QUITTER.
-message.chooseLanguage = 
+message.exit = AU REVOIR ET A LA PROCHAINE!
