Fixed some typos in MessageBundle_en_Us.properties

--- a/src/resources/MessageBundle_en_US.properties
+++ b/src/resources/MessageBundle_en_US.properties
@@ -27,6 +27,7 @@ message.chooseIndexForEdit = PLEASE CHOOSE THE INDEX OF THE CITY THAT YOU WANT T
 # Change language section:
 menu.changeLocale = CHANGE LANGUAGE.
 message.chooseLanguage = FOR THE MOMENT, THIS APPLICATION IS SUPPORTED ONLY IN FRENCH AND IN ENGLISH. DO YOU WANT TO SWITCH TO FRANCE?
+message.printValidAnswerException = PLEASE SUMBIT A VALID DECISION ('YES', 'Y', 'NO' or 'N').
 
 # Exit section:
 menu.exit = EXIT.
