Commiting binary files

--- a/bin/resources/MessageBundle_fr_FR.properties
+++ b/bin/resources/MessageBundle_fr_FR.properties
@@ -7,9 +7,12 @@ message.printAllException = VOUS N'AVEZ VISITEZ AUCUNE VILLE POUR LE MOMENT.
 message.availableCitiesStr = VILLES DISPONILBLES:
 message.visitedAtStr = VISITE LE
 
+# Change language section:
+menu.changeLocale = CHANGER LA LANGUE.
+message.chooseLanguage = POUR LE MOMENT, CETTE APPLICATION EST SUPPORTEE QU'EN FRANCAIS ET EN ANGLAIS. SUPPORTED ONLY IN FRENCH AND IN ENGLISH. VOULEZ VOUS CHANGER LA LANGUE EN ANGLAIS?
+message.printValidAnswerException = VEUILLEZ CHOISIR UNE OPTION VALIDE ('OUI', 'O', 'NON' ou 'N').
+
 menu.addCity = AJOUTER UNE VILLE.
 menu.editCity = MODIFIER UNE VILLE.
 menu.removeCity = SUPPRIMER UNE VILLE.
-menu.changeLocale = CHANGER LA LANGUE.
 menu.exit = QUITTER.
-message.chooseLanguage = POUR LE MOMENT, CETTE APPLICATION EST SUPPORTEE QU'EN FRANCAIS ET EN ANGLAIS. SUPPORTED ONLY IN FRENCH AND IN ENGLISH. VOULEZ VOUS CHANGER LA LANGUE EN ANGLAIS?
