--- a/bin/resources/MessageBundle_en_US.properties
+++ b/bin/resources/MessageBundle_en_US.properties
@@ -6,7 +6,7 @@ menu.chooseAction = PLEASE, CHOOSE AN ACTION:
 menu.printAll = PRINT ALL CITIES.
 message.printAllException = THERE IS NO AVAILABLE CITY AT THE MOMENT.
 message.availableCitiesStr = AVAILABLE CITIES:
-message.printCity = \n CITY {0} || VISITED ON DATE {1}
+message.printCity = CITY {0} || VISITED ON DATE {1}
 
 # Add city section:
 menu.addCity = ADD A CITY.
@@ -27,6 +27,7 @@ message.chooseIndexForEdit = PLEASE CHOOSE THE INDEX OF THE CITY THAT YOU WANT T
 # Change language section:
 menu.changeLocale = CHANGE LANGUAGE.
 message.chooseLanguage = FOR THE MOMENT, THIS APPLICATION IS SUPPORTED ONLY IN FRENCH AND IN ENGLISH. DO YOU WANT TO SWITCH TO FRANCE?
+message.printValidAnswerException = PLEASE SUMBIT A VALID DECISION ('YES', 'Y', 'NO' or 'N').
 
 # Exit section:
 menu.exit = EXIT.
